--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -14,6 +14,29 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* margin-top: -2rem; */
+    margin-top: calc(0px - 1.5rem - 6px);
+}
+
+.profile strong {
+    color: var(--gray-100);
+    line-height: 1.6rem;
+    margin-top: 1rem;
+}
+
+.profile span {
+    color: var(--gray-400);
+    font-size: 0.875rem;
+    line-height: 1.6rem;
+}
+
+.avatar {
+    /* box-sizing: initial; */
+    width: calc(3rem + 12px);
+    height: calc(3rem + 12px);
+    border-radius: 8px;
+    border: 4px solid var(--gray-800);
+    outline: 2px solid var(--green-500);
 }
 
 .sidebar footer {
@@ -27,11 +50,19 @@
     border: 1px solid var(--green-500);
     border-radius: 8px;
     color: var(--green-500);
-    padding: 1rem 1.5rem .875rem;
+    padding: 1rem 1.5rem 0.875rem;
     text-decoration: none;
     width: 100%;
 
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 0.625rem;
+
+    transition: color 0.1s, background-color 0.1s;
+}
+
+.sidebar footer a:hover {
+    background-color: var(--green-500);
+    color: var(--white);
 }
